--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -33,8 +33,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   color: var(--standard-app-color);
 }
 
-.hover-app-color:hover{
-  background-color: var(--dark-standard-app-color);
+.hover-app-text-color:hover{
+  color: var(--standard-app-color);
 }
 
 .flip {
@@ -48,7 +48,7 @@ input {
 }
 
 input:focus {
-  border: 2px solid #bbb;
+  border: 2px solid #818181;
 }
 
 .required::after {
