--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap&display=swap');
 
 :root {
-  --standard-app-color: #EF1704;
+  --standard-app-color: #e21604;
   --dark-standard-app-color: #c91606;
+  --light-standard-app-color: #fff8f7;
   --standard-app-success-color: @apply bg-green-700;
+  font-family: 'Ubuntu','Montserrat', 'Corbel';
+  line-height: 1.5;
+  font-weight: 400;
+  color: hsl(0, 0%, 17%)
 }
 
 @tailwind base;
@@ -11,9 +16,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: 'Ubuntu','Montserrat', 'Corbel';
-  line-height: 1.5;
-  font-weight: 400;
+  
 }
 
 .graph-bg {
@@ -59,4 +62,40 @@ input:focus {
 .app-success {
   transition: 0.1s ease-in-out;
   color: #000;
+}
+
+
+.app-page-tabs {
+  padding: 5px 10px;
+  cursor: pointer;
+}
+.app-page-tabs.active {
+  border-bottom: 2px solid var(--standard-app-color);
+  color: var(--standard-app-color)
+}
+
+.app-page-tabs:hover {
+  color: var(--standard-app-color);
+}
+
+.app-header {
+  height: 8vh;
+}
+
+.app-content {
+  height: 84vh;
+}
+
+.app-footer {
+  height: 8vh;
+}
+
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: var(--standard-app-color);
 }
