Added changes to the css file

--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -118,8 +118,10 @@ p {
   display: grid;
   grid-template-rows: 2fr 5fr 1fr;
   height: 60vh;
-  @apply rounded-lg p-[3vh] w-full place-items-start;
-  background: #ffe0e0;
+  @apply rounded-lg p-[3vh] w-full place-items-start bg-gray-50;
+  /* background: #fdf8f8; */
+  /* box-shadow: 0 5px 6px  #ccc; */
+  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.13), 0px 0px 2.9px rgba(0, 0, 0, 0.11);
 }
 
 .app-grid {
