--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -28,7 +28,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 
 .hover-app-bg-color:hover {
-  background-color: var(--standard-app-color);
+  background-color: var(--dark-standard-app-color);
 }
 
 .app-text-color {
