--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -117,11 +117,26 @@ p {
 .job-card{
   display: grid;
   grid-template-rows: 2fr 5fr 1fr;
-  max-height: 80vh;
-  @apply rounded-lg p-[3vh] w-full place-items-start bg-gray-50 gap-3;
+  max-height: 55vh;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  @apply rounded-lg p-[3vh] w-full place-items-start gap-3 text-sm;
   /* background: #fdf8f8; */
   /* box-shadow: 0 5px 6px  #ccc; */
-  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.13), 0px 0px 2.9px rgba(0, 0, 0, 0.11);
+}
+
+
+.app-gray {
+  @apply bg-gray-100;
+}
+.job-card:hover div h2 {
+  text-decoration: underline;
+}
+
+.job-card:hover {
+  border: 1px solid #bbb;
+  cursor: pointer;
+  box-shadow: 0px 1.6px 3.6px rgba(238, 236, 236, 0.13), 0px 0px 2.9px rgba(202, 202, 202, 0.11);
 }
 
 .app-grid {
@@ -139,7 +154,7 @@ p {
 
 @media screen and (max-width: 899px) {
   .app-grid {
-    grid-template-rows: 10% 80% 10%;
+    grid-template-rows: 8% 80% 10%;
   }
 
   .job-card-img {
