--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -117,26 +117,24 @@ p {
 .job-card{
   display: grid;
   grid-template-rows: 2fr 5fr 1fr;
-  max-height: 55vh;
+  max-height: 60rem;
   overflow: hidden;
   border: 1px solid #ccc;
   @apply rounded-lg p-[3vh] w-full place-items-start gap-3 text-sm;
-  /* background: #fdf8f8; */
-  /* box-shadow: 0 5px 6px  #ccc; */
-}
-
-
-.app-gray {
-  @apply bg-gray-100;
-}
-.job-card:hover div h2 {
-  text-decoration: underline;
 }
 
 .job-card:hover {
   border: 1px solid #bbb;
   cursor: pointer;
   box-shadow: 0px 1.6px 3.6px rgba(238, 236, 236, 0.13), 0px 0px 2.9px rgba(202, 202, 202, 0.11);
+}
+
+.job-card:hover div h2 {
+  text-decoration: underline;
+}
+
+.app-gray {
+  @apply bg-gray-100;
 }
 
 .app-grid {
