Modified some parts in the UI

--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -122,8 +122,8 @@ p {
   height: 21rem;
   overflow: hidden;
   border: 1px solid #ccc;
-  @apply rounded-lg p-[3vh] w-full place-items-start gap-3 text-sm ;
-  box-shadow: 0px 2px 8px -1px #ebebeb;
+  @apply rounded-lg px-[3.5vh] py-[3vh] w-full place-items-start gap-3 text-sm ;
+  box-shadow: 3px 3px 8px -1px #ebebeb;
 }
 
 .job-card:hover {
