--- a/SeekJob/src/index.css
+++ b/SeekJob/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;  
@@ -9,7 +8,7 @@
   --dark-standard-app-color: #c91606;
   --light-standard-app-color: #fff8f7;
   --standard-app-success-color: @apply bg-green-700;
-  font-family: 'Ubutu','Montserrat', 'Poppins';
+  font-family: 'Ubutu','Montserrat', 'Work Sans';
   line-height: 1.5;
   font-weight: 400;
   color: hsl(0, 0%, 17%)
